--- a/public/style.css
+++ b/public/style.css
@@ -1,19 +1,17 @@
-body {
+
+html, body {
     margin: 0;
     padding: 0;
     background-color: #000000;
     overflow: hidden;
-    height: 100vh;
-}
-
-html, body {
+    height: 100%;
     overscroll-behavior: none;
     touch-action: none;
 }
 
 #app {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
